<resources>
    <string name="app_name">Ejemplo 4</string>
    <string name="text_name">Name</string>
    <string name="hint_name">Write a name</string>
    <string name="text_email">Email</string>
    <string name="hint_email">Your email</string>
    <string name="text_message">Message</string>
    <string name="hint_message">Write what you need</string>
    <string name="action_send">Send</string>
    <string name="action_contact">Contact</string>
    <string name="greeting_text">Hello, %s</string>
    <string name="message_sent_text">Your Message has been sent</string>
    <string name="seconds_to_redirect_text">Redirecting in : %d</string>
</resources>
